# solver-rc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run  solver  utils.hpp
kociemba/: defs.py  server.py  sockets.py  solver.py
precomputed/: conj_ud_edges  move_ud_edges  phase2_edgemerge
solver-rc/: CMakeLists.txt  cube.cpp  cube.hpp  main.cpp  solver.cpp  solver.hpp
solver-rc/shaders/: vertexShader.vert
src/: CMakeLists.txt  main.cpp  utils.hpp
src/cube/: constants.hpp  cube.cpp  cube.hpp  enums.hpp
src/kociemba-solver/: coord_cube.cpp  solver.cpp  solver.hpp  static.cpp  tables_conjugation.cpp  tables_coord_symmetry.cpp  tables_move.cpp  tables_pruning.cpp  tables_symmetry.cpp
src/shaders/: fragmentShader.frag  vertexShader.vert
src/solvers/: coordinate_cube.cpp  solvers.cpp  solvers.hpp  static.cpp  tables_conjugation.cpp  tables_coord_symmetry.cpp  tables_move.cpp  tables_pruning.cpp  tables_symmetry.cpp
tests/: CMakeLists.txt  test_cube.cpp  test_solver.cpp
